# xezim

./: .gitignore  .gitmodules  .swp  Cargo.toml  FUNCTIONAL-PARLOOP-SCOPE.md  HOT-ARENA-NOTES.md  IMPROVEMENT-SUGGESTIONS.md  IN-PLACE-SETTLE-SCOPE.md  JIT-REDESIGN-NOTES.md  MULTIKERNEL-NOTES.md  MULTITHREADING_ANALYSIS.md  PARALLELIZATION-ALTERNATIVES.md  PER-LP-NEXT-STEPS.md  PERLP-EVENTLOOP-PLAN.md  PICORV32_EZ_SURFER_API.md  README.md  SESSION-3-SUMMARY.md  SESSION-4-SUMMARY.md  SESSION-SUMMARY.md  build.rs  changes_2026-05-07.txt  install_xezim_on_mac.sh  questa_force_release_compilance  svdpi.h  vpi_backdoor_compliance  vpi_user.h
.github/workflows/: ci.yml  fix-lint.yml  msrv.yml  test.yml
bench/: README.md  gen_designs.py  run_bench.sh
docs/: c910_memcpy_investigation.md  dpi-guide.md  uvm-guide.md
dpi/spike/: .gitignore  Makefile  README.md  link.ld  test_spike_asm.S  test_spike_dpi.sv  xezim_spike_dpi.cpp  xezim_spike_dpi.svh
examples/: e902_part2_ifctrl.v  e902_part3_iu_stall.v  e902_part4_decd_probe.v  e902_part5_decd_min.v  e902_part6_decd_replay.v  e902_part7_ifctrl_replay.v  full_adder.sv  perlp_toy.sv  stress_comb.sv  stress_explicit.sv  stress_signals.sv  tb_adder.sv  test.sv  test2.sv  test3.sv
include/: sv_vpi_user.h  svdpi.h  uvm_dpi_xezim.cc  veriuser.h  vpi_user.h
reports/: sv-tests-compliance.md  svtests_index.html  svtests_report.csv  uvmtests-vs-xezim.md  uvmtests_harness.py  uvmtests_results.json
scripts/: build_uvm_so.sh  install.sh  pgo-build.sh  remote_uvm.sh  run_cv32e40p_uvm.sh  run_picorv32_ez_surfer_api.sh
simtest/xuantie_c910/: README.md  mspec.html  run_c910_hello.sh  run_c910_hello_xtrace.sh  setup.sh  vspec.html  xuantie_c910.html
src/: intra_delay.rs  lib.rs  main.rs  multikernel.rs  should_fail_lint.rs  tbb.rs  tbb_shim.cpp  vpi_printf_shim.c
src/ast/: decl.rs  expr.rs  mod.rs  module.rs  stmt.rs  types.rs
src/compiler/: bytecode.rs  elaborate.rs  jit.rs  mod.rs  native_codegen.rs  simulator.rs  simulator.rs.new_helper  stdout_sink.rs  value.rs  vcd_sink.rs
src/lexer/: scanner.rs  token.rs
src/multikernel/: tests.rs
src/parser/: declarations.rs  expressions.rs  helpers.rs  items.rs  mod.rs  statements.rs  types.rs
tests/: always_level_delay.rs  array_locator_index.rs  array_locator_named_iterator.rs  array_of_module_instances.rs  array_query_multidim_packed.rs  assoc_method_dispatch.rs  bind_directive_basic.rs  bit_class_property_signedness.rs  blocking_loop_break_continue.rs  c910_biu_bresp_capture_race.rs  c910_create_en_cont_assign.rs  c910_settle_miri.rs  callback_typedef_static.rs  case_default_arm.rs  case_wait_in_task.rs  cast_typeparam.rs  cast_value_param_specs.rs  class_local_typedef_aa.rs  class_local_typedef_resolution.rs  class_name_method_shadow.rs  class_program_test.rs  compliance_tests.rs  concurrent_local_dyn_arrays.rs  constraint_arrays_ordering.rs  constraint_randc_soft_local.rs  copy_constructor_decl_init.rs  cov_assertion_basic.rs  cov_covergroup_basic.rs  coverage_auto_bins.rs  covergroup_coverage_query.rs  dead_clock_watchdog.rs  dep_reg_entry_synth.rs  deposit_task.rs  determinism_and_stall.rs  disable_loop_label.rs  dpi_integration_tests.rs  drive_strength_pull.rs  edge_delivery.rs  edge_event_lsb.rs  event_features_15_5.rs  (+77 more)
(+215 files in other folders)
