[package]
name = "sisvsim"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
description = "SystemVerilog simulator targeting IEEE 1800-2017/2023"
license = "MIT OR Apache-2.0"

[dependencies]
ahash = "0.8"
rand = "0.8"
sv-parser = { path = "sv-parser" }
libloading = "0.8"
libffi = "3"

[[bin]]
name = "sisvsim"
path = "src/main.rs"

[lib]
name = "sisvsim"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
