[package]
name = "xezim"
version = "0.9.7"
build = "src/build.rs"
edition = "2021"
rust-version = "1.85.1"
description = "SystemVerilog bytecode interpreter (IEEE 1800-2023, with --sv2017 opt-out). For native compilation, see xezim-b."
license = "MIT OR Apache-2.0"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
rand = "0.8"
xezim-core = { path = "../xezim-core" }
sv-parser = { path = "../xezim-core/xezim-parser" }
libloading = "0.8"
libffi = "3"
libc = "0.2"
serde = { version = "1", features = ["derive", "rc"] }
bincode = "1.3"
mimalloc = "0.1"
# JIT: enabled with `--features jit`. Kept optional to avoid adding the
# cranelift build dependency to users who only want the interpreter.
cranelift = { version = "0.109", optional = true }
cranelift-jit = { version = "0.109", optional = true }
cranelift-module = { version = "0.109", optional = true }
cranelift-native = { version = "0.109", optional = true }
fst-writer = "0.3"

[dev-dependencies]
# `tests/xtrace_conformance.rs` reads a zstd-compressed XTrace dump back to
# check that its header declares the compression (XTrace §6.8). Same version
# xezim-core writes the stream with.
zstd = "0.13"

[build-dependencies]
cc = "1"

[features]
default = []
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native"]

[[bin]]
name = "xezim"
path = "src/main.rs"

[lib]
name = "xezim"
path = "src/lib.rs"

[profile.release]
# LTO miscompiled the (since-removed) LLVM JIT path; kept off until
# it is validated against the cranelift JIT. The ~5-10% perf cost is
# acceptable; the interpreter hot path was already memory-bound.
lto = false
codegen-units = 1
opt-level = 3
debug = "line-tables-only"
panic = "abort"

# Interpreter-only LTO build. Use when NOT building with `--features jit`.
# Build with:
#   cargo build --release --profile release-lto --bin xezim
# (Binary lands in `target/release-lto/xezim`.)  Measured on c910 hello
# to shave a few seconds off the interpreter hot path via cross-crate
# inlining of Value ops and signal_table access.
[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
